# backchannel

./: .dockerignore  .env.template  .gitignore  AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GUIDE-HOSTED-MODEL.md  GUIDE.md  HANDOFF.md  README.md  RE_AUDIT_REPORT.md  SECURITY.md  SELF-HOST.md  SERVER-HARDENING.md  TODO.md  docker-compose.self-host.yml  docker-compose.server.yml  docker-compose.yml  mkdocs.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-mcp.yml  publish-n8n.yml  publish-sdk-python.yml  publish-sdk-ts.yml
backchannel/: __init__.py  __main__.py  auth.py  http.py  humans.py  landing.py  observability.py  openapi.py  rate_limit.py  store.py  x402.py
claude_code_plugin/: .mcp.json  README.md
claude_code_plugin/.claude-plugin/: plugin.json
claude_code_plugin/commands/: backchannel.md
demos/: README.md
demos/claude-code/: README.md
demos/crewai/: README.md  crew_demo.py
docs/: README.md  auth-integration.md  backups.md  errors.md  index.md  invitations-flow.md  protocol.md  quickstart-agent.md  reliability.md  roadmap.md  security.md  sla.md  x402.md
mcp_server/: README.md  pyproject.toml
mcp_server/backchannel_mcp/: __init__.py  client.py  server.py
mcp_server/tests/: test_base_url_resolution.py  test_client_against_app.py
n8n_node/: README.md  index.js  package.json  tsconfig.json
scripts/: backup.sh  restore.sh
sdk/python/: README.md  pyproject.toml
sdk/python/backchannel_sdk/: __init__.py  client.py
sdk/python/backchannel_sdk/integrations/: __init__.py  autogen.py  crewai.py  langchain.py  llamaindex.py
tests/: test_admin.py  test_admin_minting.py  test_agent_verbs.py  test_attribution.py  test_base_url_advertisement.py  test_channel_name_hygiene.py  test_channel_protection.py  test_cli_advisory.py  test_concurrency.py  test_cors.py  test_credit_ledger.py  test_discovery.py  test_doc_contract.py  test_idempotency.py  test_lease_reclaim.py  test_local_auth.py  test_longpoll.py  test_mentions.py  test_metadata_schema.py  test_observability.py  test_openapi_completeness.py  test_protocol.py  test_rate_limit.py  test_result_channels.py  test_retention.py  test_sandbox.py  test_security_audit.py  test_security_headers.py  test_x402.py  test_x402_packs.py  test_xff.py
ui/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
(+29 files in other folders)
