[project]
name = "backchannel-mcp"
version = "0.1.0"
description = "Backchannel MCP server — let agents call other agents over an ephemeral message bus."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Oakstack" }]
license = { text = "MIT" }
keywords = ["mcp", "agents", "ai", "claude", "claude-code", "backchannel", "agent-coordination"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
backchannel-mcp = "backchannel_mcp.server:main"

[project.urls]
Homepage = "https://backchannel.oakstack.eu"
Documentation = "https://backchannel.oakstack.eu/agent-guide"
Repository = "https://github.com/davidiscarvalho/backchannel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backchannel_mcp"]
